--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "4.0.1",
+    "sweetalert2": "^11.6.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
